--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "relayer_actions": "run-s build tutorial:relayer_actions",
         "order_actions": "run-s build tutorial:order_actions",
         "relayer_websocket:part1": "run-s build generate_initial_order_book tutorial:relayer_websocket:part1",
-        "relayer_websocket:part2": "run-s build tutorial:relayer_websocket:part2"
+        "relayer_websocket:part2": "run-s build tutorial:relayer_websocket:part2",
+        "go": "run-s clean build api"
     },
     "license": "Apache-2.0",
     "config": {
@@ -26,6 +27,7 @@
         "snapshot_url": "https://s3.amazonaws.com/testrpc-shapshots/07d00cc515e0f9825b81595386b358593b7a3d6f.zip"
     },
     "devDependencies": {
+        "@0xproject/typescript-typings": "^0.2.0",
         "@types/body-parser": "^1.16.8",
         "@types/express": "^4.11.1",
         "@types/node": "^8.0.53",
@@ -36,16 +38,19 @@
         "npm-run-all": "^4.1.2",
         "shx": "^0.2.2",
         "tslint": "5.8.0",
-        "typescript": "2.7.1",
-        "@0xproject/typescript-typings": "^0.2.0"
+        "typescript": "2.7.1"
     },
     "dependencies": {
         "0x.js": "0.36.3",
         "@0xproject/connect": "^0.6.10",
         "@0xproject/tslint-config": "^0.4.16",
         "@0xproject/utils": "^0.5.2",
+        "@types/mysql": "^2.15.5",
         "body-parser": "^1.18.2",
         "express": "^4.16.2",
+        "from": "^0.1.7",
+        "import": "^0.0.6",
+        "mysql": "^2.16.0",
         "web3": "^0.20.0",
         "websocket": "^1.0.25"
     }
