--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "dependencies": {
         "0x.js": "0.36.3",
         "@0xproject/connect": "^0.6.10",
+        "@0xproject/json-schemas": "^0.8.3",
         "@0xproject/tslint-config": "^0.4.16",
         "@0xproject/utils": "^0.5.2",
+        "@types/mongoose": "^5.2.5",
         "@types/mysql": "^2.15.5",
         "body-parser": "^1.18.2",
         "express": "^4.16.2",
         "from": "^0.1.7",
         "import": "^0.0.6",
+        "mongoose": "^5.2.7",
         "mysql": "^2.16.0",
         "web3": "^0.20.0",
         "websocket": "^1.0.25"
