Add orderBook pinging

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@0xproject/json-schemas": "^0.8.3",
         "@0xproject/tslint-config": "^0.4.16",
         "@0xproject/utils": "^0.5.2",
+        "@types/lodash": "^4.14.116",
         "@types/mongoose": "^5.2.5",
         "@types/mysql": "^2.15.5",
         "@types/node-fetch": "^2.1.2",
@@ -53,6 +54,7 @@
         "express": "^4.16.2",
         "from": "^0.1.7",
         "import": "^0.0.6",
+        "lodash": "^4.17.10",
         "mongoose": "^5.2.7",
         "mysql": "^2.16.0",
         "node-fetch": "^2.2.0",
