--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
         "@0xproject/json-schemas": "^0.8.3",
         "@0xproject/tslint-config": "^0.4.16",
         "@0xproject/utils": "^0.5.2",
+        "@types/cors": "^2.8.4",
         "@types/lodash": "^4.14.116",
         "@types/mongoose": "^5.2.5",
         "@types/mysql": "^2.15.5",
         "@types/node-fetch": "^2.1.2",
         "body-parser": "^1.18.2",
+        "cors": "^2.8.4",
         "express": "^4.16.2",
         "from": "^0.1.7",
         "import": "^0.0.6",
