--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "0xStarterProject",
+    "name": "captains-barter-relayer",
     "version": "0.1.0",
     "description": "",
     "scripts": {
